--- a/tutorials/linguistics_prague_2022_workshop/ggplot_workshop.Rmd
+++ b/tutorials/linguistics_prague_2022_workshop/ggplot_workshop.Rmd
@@ -10,6 +10,9 @@ output:
     collapsed: false
     df_print: paged
     lightbox: TRUE
+    css: sty.css
+    includes:
+      after_body: copy-button.html
     
 ---
 
